collects/tests/typed-scheme/fail/box-fail.ss
#lang typed-scheme

(let: ([x : (Boxof Number) (box "foo")]) x)